[project]
name = "remote-to-home-assistant"
version = "0.1.0"
description = "Use evdev to capture generic remote button presses and send to Home Assistant"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "asyncio>=4.0.0",
    "python-dotenv>=1.2.1",
]

[tool.uv]
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux'",
]
